--- a/release-notes.haml
+++ b/release-notes.haml
@@ -28,6 +28,14 @@
   %table
     %tr
       %td.header
+        %a(name="version-1.0a7")
+          %b Changes in version 1.0a7
+    %tr.contents
+      %td
+        %p Fixed problem with empty tagchimp result causing a crash
+  %table
+    %tr
+      %td.header
         %a(name="version-1.0a6")
           %b Changes in version 1.0a6
     %tr.contents
