--- a/release-notes.haml
+++ b/release-notes.haml
@@ -28,6 +28,51 @@
   %table
     %tr
       %td.header
+        %a(name="version-1.0a9")
+          %b Changes in version 1.0a9
+    %tr.contents
+      %td
+        %p
+          By request we are pleased to release Alpha 9 of MetaZ that brings with it a whole host of bug fixes and some
+          exciting new features.
+          
+        %p
+          First off TheTVDB searching now retrieves season posters and UI is improved to let you select the one you prefer
+          from all available posters. 
+          
+        %p A plugin for searching TheMovieDb.org has been added, greatly improving the ease with which movies can be tagged.
+        
+        %p All searching now supports caching which should bring with it some speed improvements.
+          
+        %p
+          On the downside the Amazon plugin has been temporarily removed because it has been broken since october
+          and we haven't gotten around to fixing it yet.
+      
+        %p The complete list of changes are:
+        %ul
+          %li Changed Sparkle url and switched on system profile
+          %li Updated growl and switched to a MultiGrowl approach for loading it so we can support both mist and legacy
+          %li Changed default time zone to UTC
+          %li Added TheMovieDb searching
+          %li Fixed problem in mp4chaps that caused it to crash with some files
+          %li Added a filename changed checkbox to files table and got revertChanged to work on files table
+          %li Changed status column to a dot like Mail
+          %li= "Added support for two ISO 8601 date formats #{bug_link(39)} to all date fields; 2008-07-19 and 2008-07-19T00:00:00Z"
+          %li Fixed apply search result to now use the picture selected in ui
+          %li Fixed encoding problems in search results
+          %li Added posters support to TheTVDB search plugin
+          %li Added support for array of pictures to PictureEditor
+          %li Fixed index error in MZFileNameTextStorage
+          %li Changed TheTVDB search to use full series files
+          %li Switched all http requests to ASIHttpRequest which means caching support
+          %li Changed progress bar on main window to appear with an animation and not modify the window size
+          %li Switched to MGViewAnimation
+          %li Reworked credits to make it clearer when contributer is there because we simply used their code ie. they are not associated with or endorse MetaZ
+          %li Cleaned up code the hides and shows main window progress bar and made it a little more robust
+          %li Fixed dock icon file drop
+  %table
+    %tr
+      %td.header
         %a(name="version-1.0a8")
           %b Changes in version 1.0a8
     %tr.contents
