Fixed spelling error in release notes

--- a/release-notes.haml
+++ b/release-notes.haml
@@ -46,7 +46,7 @@
         
         %p
           This release also contains a reworked notification / event system which is now based on plugins and brings
-          with it support for plugins implemented in AppleScript. The two iTunes releated completion actions are
+          with it support for plugins implemented in AppleScript. The two iTunes related completion actions are
           in fact implemented in AppleScript. Though the process for doing so is currently a bit involved it should
           be possible for you to make your own plugins in AppleScript.
           
